mongodb.yaml
apiVersion: v1
kind: Service
metadata: 
  name: mongosvc
spec: 
  selector:
    role: mongodb
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: mongodb
spec:
  selector:
    matchLabels:
      role: mongodb
  serviceName: "mongosvc"
  replicas: 3
  template:
    metadata:
      labels:
        role: mongodb
    spec:
       terminationGracePeriodSeconds: 10
       containers:
       - name: mongodb
         image: mongo
         ports:
         - containerPort: 27017
         command: 
         - "mongod"
         - "--bind_ip"
         - "0.0.0.0"
         - "--replSet"
         - "MainRepSet"
         volumeMounts:
         - name: mongo-persistent-storage
           mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-persistent-storage
    spec: 
      storageClassName: "nfs-storageclass"
      accessModes: ["ReadWriteMany"]
      resources:
        requests:
          storage: 1Gi
