mongodb1.yaml
apiVersion: v1
kind: Service
metadata: 
  name: mongosvc
spec: 
  selector:
    role: mongodb
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: mongodb
spec:
  selector:
    matchLabels:
      role: mongodb
  serviceName: "mongosvc"
  replicas: 3
  template:
    metadata:
      labels:
        role: mongodb
    spec:
       containers:
       - name: mongodb
         image: mongo
         ports:
         - containerPort: 27017
         command: 
         - "mongod"
         - "--bind_ip"
         - "0.0.0.0"
         - "--replSet"
         - "MainRepSet"
         resources:
           requests:
             cpu: 300m
             memory: 256Mi
           limits:
             cpu: 512m
             memory: 512Mi
         volumeMounts:
         - name: mongodb-volume
           mountPath: "/data/db"
   volumeClaimTemplates:
   - metadata:
      name: mongodb-volume
     spec: 
       accessModes: ["ReadWriteOnce"]
       resources:
         requests:
           storage: 1Gi
